--- a/distributions/pom.xml
+++ b/distributions/pom.xml
@@ -19,4 +19,31 @@
     <module>virtualization/</module>
     <module>serviceprovider/</module>
   </modules>
+  <profiles>
+    <profile>
+      <id>dependencyConvergence</id>
+      <build>
+        <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-enforcer-plugin</artifactId>
+          <version>1.3.1</version>
+          <executions>
+            <execution>
+              <id>Dependency-Convergence</id>
+              <goals>
+                <goal>enforce</goal>
+              </goals>
+              <configuration>
+                <rules>
+                  <DependencyConvergence/>
+                </rules>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
