--- a/distributions/serviceprovider/pom.xml
+++ b/distributions/serviceprovider/pom.xml
@@ -336,6 +336,16 @@ http://maven.apache.org/maven-v4_0_0.xsd">
     </dependency>
     <dependency>
       <groupId>org.opendaylight.bgpcep</groupId>
+      <artifactId>pcep-ietf-stateful02</artifactId>
+      <version>${bgpcep.pcep.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.bgpcep</groupId>
+      <artifactId>pcep-ietf-stateful07</artifactId>
+      <version>${bgpcep.pcep.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.bgpcep</groupId>
       <artifactId>pcep-impl-config</artifactId>
       <version>${bgpcep.pcep.version}</version>
     </dependency>
