--- a/distributions/serviceprovider/pom.xml
+++ b/distributions/serviceprovider/pom.xml
@@ -413,7 +413,7 @@ http://maven.apache.org/maven-v4_0_0.xsd">
     <!-- lispflowmapping -->
 	<dependency>
       <groupId>org.opendaylight.lispflowmapping</groupId>
-      <artifactId>mappingservice.yangmodek</artifactId>
+      <artifactId>mappingservice.yangmodel</artifactId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
 
