updated docker build files to expose additional ports in support of clustering, rpcs and lisp. added to readme to describe how to make clustering work with containers
Signed-off-by: David K. Bainbridge <dbainbri@ciena.com>

--- a/packaging/docker/release/Dockerfile.serviceprovider
+++ b/packaging/docker/release/Dockerfile.serviceprovider
@@ -10,10 +10,14 @@ RUN rm -rf /opt/*.zip
 #    JMX:                  1088
 #    Netconf:              1830
 #    OSGi Console:         2400
+#    Lisp Flow Mapping:    4342 # Service Provider Version
+#    Internal Cluster RPC  5666
 #    OpenFlow:             6633
+#    ODL Clustering        7800
 #    [default] Java Debug: 8000
 #    ODL Web Portal:       8080
 #    Netconf:              8383
-EXPOSE 1088 1830 2400 6633 8000 8080 8383
+#    ODL Clustering        12001
+EXPOSE 1088 1830 2400 4342 5666 6633 7800 8000 8080 8383 12001
 WORKDIR /opt/opendaylight
 ENTRYPOINT ["/opt/opendaylight/run.sh"]
