--- a/distributions/virtualization/pom.xml
+++ b/distributions/virtualization/pom.xml
@@ -68,6 +68,13 @@ http://maven.apache.org/maven-v4_0_0.xsd">
       <type>tar.bz2</type>
       <classifier>bin</classifier>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.vtn</groupId>
+      <artifactId>distribution.vtn-coordinator</artifactId>
+      <version>5.0.0.0-SNAPSHOT</version>
+      <type>txt</type>
+      <classifier>README</classifier>
+    </dependency>
 
     <!-- defense4all -->
 
