Fix to the scm section to make the bulk prepare work
Change-Id: I724644f6343cca25c630972f3603a46bd0571713
Signed-off-by: Ed Warnicke <eaw@cisco.com>

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,10 @@
   <packaging>pom</packaging>
   <url>https://wiki.opendaylight.org/view/CrossProject:Integration_Group</url>
   <scm>
-    <connection>scm:git:https://git.opendaylight.org/gerrit/p/integration.git</connection>
+    <connection>scm:git:ssh://git.opendaylight.org:29418/integration.git</connection>
+    <developerConnection>scm:git:ssh://git.opendaylight.org:29418/integration.git</developerConnection>
+    <url>https://wiki.opendaylight.org/view/CrossProject:Integration_Group</url>
+    <tag>HEAD</tag>
   </scm>
   <properties>
     <nexusproxy>http://nexus.opendaylight.org/content</nexusproxy>
