Added release version of snmp4sdn to service provider edition pom.xml
Change-Id: I8c7defe7c6814bc9b4891eac1d84552f2b19d759
Signed-off-by: Ed Warnicke <eaw@cisco.com>

--- a/distributions/serviceprovider/pom.xml
+++ b/distributions/serviceprovider/pom.xml
@@ -451,7 +451,7 @@ http://maven.apache.org/maven-v4_0_0.xsd">
     <dependency>
       <groupId>org.opendaylight.snmp4sdn</groupId>
       <artifactId>snmp4sdn</artifactId>
-      <version>0.1.0-SNAPSHOT</version>
+      <version>0.1.1</version>
     </dependency>
 
   </dependencies>
