updated docker files to be more in line with some best practices as well as enable the build system, which uses fedora as opposed to ubuntu. this commit also fixes the release versions in the docker files for the release
Signed-off-by: David K. Bainbridge <dbainbri@ciena.com>

--- a/packaging/docker/release/serviceprovider/Dockerfile
+++ b/packaging/docker/release/serviceprovider/Dockerfile
@@ -1,10 +1,24 @@
 FROM ubuntu:12.04
 MAINTAINER OpenDaylight Project <info@opendaylight.org>
-RUN echo "deb http://archive.ubuntu.com/ubuntu precise main universe" >> /etc/apt/sources.list
-RUN apt-get update && apt-get -y upgrade
+
+# If the precise main universe repo is not already in the apt source list, then add it
+RUN if [ \! -f "/etc/apt/sources.list" -o `grep "deb http://archive.ubuntu.com/ubuntu precise main universe" /etc/apt/sources.list | wc -l` -eq 0 ]; then echo "deb http://archive.ubuntu.com/ubuntu precise main universe" >> /etc/apt/sources.list; fi
+
+# Remove the cache information. This helps eliminate "hash sum" errors when doing an update
+# which may be caused when mirrors and caches are out of sync.
+RUN rm -fR /var/lib/apt/lists/*
+RUN mkdir /var/lib/apt/lists/partial
+
+# Update the apt information
+RUN apt-get update
+
+# Install OpenJDK 7 in headless mode
 RUN apt-get -y install openjdk-7-jre-headless unzip wget
+RUN apt-get clean
+
+# Download and Install OpenDaylight
 RUN mkdir -p /opt/
-RUN wget -q -O /opt/distribution.zip "https://nexus.opendaylight.org/service/local/artifact/maven/content?r=opendaylight.snapshot&g=org.opendaylight.integration&a=distributions-serviceprovider&v=0.1.0-SNAPSHOT&c=osgipackage&p=zip"
+RUN wget -q -O /opt/distribution.zip "https://nexus.opendaylight.org/service/local/artifact/maven/content?r=opendaylight.release&g=org.opendaylight.integration&a=distributions-serviceprovider&v=0.1.0&c=osgipackage&p=zip"
 RUN unzip /opt/*.zip -d /opt
 RUN rm -rf /opt/*.zip
 # Ports 
