--- a/packaging/docker/base/pom.xml
+++ b/packaging/docker/base/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>org.opendaylight.integration</groupId>
     <artifactId>docker</artifactId>
-    <version>0.1.1-SNAPSHOT</version>
+    <version>0.1.2-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
   <artifactId>docker-base</artifactId>
@@ -32,7 +32,7 @@
                 <artifactItem>
                   <groupId>org.opendaylight.integration</groupId>
                   <artifactId>distributions-base</artifactId>
-                  <version>0.1.1-SNAPSHOT</version>
+                  <version>${project.version}</version>
                   <type>zip</type>
                   <classifier>osgipackage</classifier>
                   <overWrite>true</overWrite>
