--- a/distributions/pom.xml
+++ b/distributions/pom.xml
@@ -17,6 +17,7 @@
     <module>base/</module>
     <module>virtualization/</module>
     <module>serviceprovider/</module>
+    <module>extra/toaster</module>
   </modules>
   <profiles>
     <profile>
