Bug 622: Replace tomcat with jetty in toaster distribution.
Remove virgo, update jersey, remove odl 3rd party wrapper around jersey servlet, use latest jetty, use version reference in config.ini .

Change-Id: Idd832558d0e601baca2c527391e7804c98c6851b
Signed-off-by: Tomas Olvecky <tolvecky@cisco.com>

--- a/distributions/extra/toaster/src/main/resources/configuration/config.ini
+++ b/distributions/extra/toaster/src/main/resources/configuration/config.ini
@@ -1,16 +1,15 @@
 osgi.bundles=\
     reference\:file\:../lib/org.apache.felix.fileinstall-3.1.6.jar@1:start,\
-    reference\:file\:../lib/org.eclipse.jdt.core.compiler.batch-3.8.0.I20120518-2145.jar@1:start,\
     reference\:file\:../lib/org.eclipse.equinox.ds-1.4.0.v20120522-1841.jar@2:start,\
     reference\:file\:../lib/org.eclipse.equinox.util-1.0.400.v20120522-2049.jar@2:start,\
     reference\:file\:../lib/org.eclipse.osgi.services-3.3.100.v20120522-1822@2:start,\
     reference\:file\:../lib/org.eclipse.equinox.console-1.0.0.v20120522-1841.jar@start,\
-    reference\:file\:../lib/slf4j-api-1.7.2.jar@1:start,\
-    reference\:file\:../lib/logback-classic-1.0.9.jar@1:start,\
-    reference\:file\:../lib/logback-core-1.0.9.jar@1:start,\
+    reference\:file\:../lib/slf4j-api-${slf4j.version}.jar@1:start,\
+    reference\:file\:../lib/logback-classic-${logback.version}.jar@1:start,\
+    reference\:file\:../lib/logback-core-${logback.version}.jar@1:start,\
     reference\:file\:../lib/logging.bridge-${controller.version}@1:start,\
-    reference\:file\:../lib/jersey-core-1.17.jar@2:start,\
-    reference\:file\:../lib/jersey-server-1.17.jar@2:start
+    reference\:file\:../lib/jersey-core-${jersey.version}.jar@2:start,\
+    reference\:file\:../lib/jersey-server-${jersey.version}.jar@2:start
 
 # Netconf startup configuration
 netconf.tcp.address=127.0.0.1
@@ -45,7 +44,7 @@ osgi.noShutdown=true
 osgi.clean=true
 # Extend the framework to avoid the resources to be presented with
 # a URL of type bundleresource: but to be presented as file:
-osgi.hook.configurators.include=org.eclipse.virgo.kernel.equinox.extensions.hooks.ExtensionsHookConfigurator
+
 # Directory from where the fileinstall will monitor for new bundles
 felix.fileinstall.dir=./plugins
 # Immediately learn new bundles at startup
@@ -133,3 +132,6 @@ java.util.logging.config.file=configuration/tomcat-logging.properties
 
 #Hosttracker hostsdb key scheme setting
 hosttracker.keyscheme=IP
+
+org.osgi.service.http.port=8080
+jetty.home.bundle=org.eclipse.jetty.osgi.boot
