Fix own artifacts version
Change-Id: Id0552b442c9caab13e4543fba890ca1e89200fc6
Signed-off-by: Luis Gomez <ecelgp@gmail.com>

--- a/distributions/serviceprovider/pom.xml
+++ b/distributions/serviceprovider/pom.xml
@@ -9,7 +9,7 @@ see https://git.opendaylight.org/gerrit/#/c/390/
   <parent>
     <groupId>org.opendaylight.integration</groupId>
     <artifactId>distributions</artifactId>
-    <version>0.1.2-SNAPSHOT</version>
+    <version>0.1.1-1-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
 
@@ -32,7 +32,7 @@ see https://git.opendaylight.org/gerrit/#/c/390/
     <dependency>
       <groupId>org.opendaylight.integration</groupId>
       <artifactId>distributions-base</artifactId>
-      <version>0.1.2-SNAPSHOT</version>
+      <version>0.1.1-1-SNAPSHOT</version>
       <type>zip</type>
       <classifier>osgipackage</classifier>
       <!-- Make sure this isn't included on any classpath-->
